--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "howler": "^2.1.1",
     "jquery": "^3.3.1",
     "react": "^16.7.0",
